@@ -279,6 +279,14 @@
     "debugger": "Not available"
   },
   {
+    "name": "nix",
+    "full-name": "Nix",
+    "server-name": "rnix-lsp",
+    "server-url": "https://github.com/nix-community/rnix-lsp",
+    "installation": "nix-env -i rnix-lsp",
+    "debugger": "Not available"
+  },
+  {
     "name": "ocaml",
     "full-name": "OCaml",
     "server-name": "ocaml-language-server",
