@@ -60,6 +60,7 @@ nav:
     - Kotlin: page/lsp-kotlin.md
     - MSSQL: https://emacs-lsp.github.io/lsp-mssql
     - Nim: page/lsp-nim.md
+    - Nix: page/lsp-nix.md
     - OCaml (ocaml): page/lsp-ocaml.md
     - OCaml (icaml-lsp): page/lsp-ocalm-lsp-server.md
     - Pascal/Object Pascal: page/lsp-pascal.md
